Adjust features section button size and effect, and add services section coverflow carousel init

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Leacloud打通你我距離</title>
 
     <!-- Bootstrap core CSS -->
@@ -10,6 +11,7 @@
     <!-- Custom styles for this template -->
     <!-- <link href="assets/css/style.css" rel="stylesheet"> -->
     <link href="assets/css/selecao.css" rel="stylesheet">
+    <link href="assets/css/carousel.css" rel="stylesheet">
   </head>
   
   <body>
@@ -85,36 +87,31 @@
           </p>
           <ul class="nav featuresItemContainer">
             <li>
-              <a class="" href="#tab-1">
-                <!-- <div class="testImage"></div> -->
+              <a class="icon-box" href="#tab-1">
                 <img src="/assets/img/introDns.png" alt="">
                 <h4>智能DNS</h4>
               </a>
             </li>
             <li>
               <a class="" href="#tab-1">
-                <!-- <div class="testImage"></div> -->
                 <img src="/assets/img/introNs.png" alt="">
                 <h4>NS託管</h4>
               </a>
             </li>
             <li>
-              <a class="" href="#tab-1">
-                <!-- <div class="testImage"></div> -->
-                <img src="/assets/img/introCname.png" alt="">
+              <a class="featuresCnameItemA" href="#tab-1">
+                <img class="featuresCnameItemImg" src="/assets/img/introCname.png" alt="">
                 <h4>CNAME託管</h4>
               </a>
             </li>
             <li>
               <a class="" href="#tab-1">
-                <!-- <div class="testImage"></div> -->
                 <img src="/assets/img/introMonitor.png" alt="">
                 <h4>Monitor</h4>
               </a>
             </li>
             <li>
               <a class="" href="#tab-1">
-                <!-- <div class="testImage"></div> -->
                 <img src="/assets/img/introSafe.png" alt="">
                 <h4>安全防護</h4>
               </a>
@@ -122,6 +119,81 @@
           </ul>
         </div>
       </section>
+
+      <section id="services" class="services">
+        <div class="container">
+  
+          <!-- <div class="section-title" data-aos="zoom-out">
+            <h2>Services</h2>
+            <p>What we do offer</p>
+          </div> -->
+          <div class="sectionTitleDiv">
+            <div class="sectionTitle">LEACLOUD</div>
+            <h1 class="sectionSubTitle">產品專業</h1>
+            <hr>
+          </div>
+
+          <div class="gallery">
+            <div class="gallery-container">
+              <img class="gallery-item" src="http://fakeimg.pl/300/?text=1">
+              <img class="gallery-item" src="http://fakeimg.pl/300/?text=2">
+              <img class="gallery-item" src="http://fakeimg.pl/300/?text=3">
+              <img class="gallery-item" src="http://fakeimg.pl/300/?text=4">
+              <img class="gallery-item" src="http://fakeimg.pl/300/?text=5">
+            </div>
+            <div class="gallery-controls"></div>
+          </div>
+  
+          <!-- <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <div class="icon-box" data-aos="zoom-in-left">
+                <div class="icon"><i class="las la-basketball-ball" style="color: #ff689b;"></i></div>
+                <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+                <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
+              <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
+                <div class="icon"><i class="las la-book" style="color: #e9bf06;"></i></div>
+                <h4 class="title"><a href="">Dolor Sitema</a></h4>
+                <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 ">
+              <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="200">
+                <div class="icon"><i class="las la-file-alt" style="color: #3fcdc7;"></i></div>
+                <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mt-5">
+              <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="300">
+                <div class="icon"><i class="las la-tachometer-alt" style="color:#41cf2e;"></i></div>
+                <h4 class="title"><a href="">Magni Dolores</a></h4>
+                <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 mt-5">
+              <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="400">
+                <div class="icon"><i class="las la-globe-americas" style="color: #d6ff22;"></i></div>
+                <h4 class="title"><a href="">Nemo Enim</a></h4>
+                <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mt-5">
+              <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="500">
+                <div class="icon"><i class="las la-clock" style="color: #4680ff;"></i></div>
+                <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+                <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              </div>
+            </div>
+          </div> -->
+  
+        </div>
+      </section>
+      
       <svg class="hero-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28 " preserveAspectRatio="none">
         <defs>
           <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z">
@@ -130,6 +202,7 @@
           <use xlink:href="#wave-path" x="50" y="9" fill="#dfefff">
         </g>
       </svg>
+
       <section id="pricing" class="pricing">
         <div class="container" data-aos="fade-up">
           <div class="sectionTitleDiv">
@@ -338,7 +411,7 @@
     <script src="assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-
+    <script src="assets/js/carousel.js"></script>
     <script>
 			// var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 			// if (isMobile) {
