--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- <link href="assets/css/style.css" rel="stylesheet"> -->
     <link href="assets/css/selecao.css" rel="stylesheet">
     <link href="assets/css/carousel.css" rel="stylesheet">
+    <link href="assets/vendor/fontAwesome/css/all.css" rel="stylesheet">
   </head>
   
   <body>
@@ -121,7 +122,7 @@
       </section>
 
       <section id="services" class="services">
-        <div class="container">
+        <div class="">
   
           <!-- <div class="section-title" data-aos="zoom-out">
             <h2>Services</h2>
@@ -135,13 +136,67 @@
 
           <div class="gallery">
             <div class="gallery-container">
-              <img class="gallery-item" src="http://fakeimg.pl/300/?text=1">
-              <img class="gallery-item" src="http://fakeimg.pl/300/?text=2">
-              <img class="gallery-item" src="http://fakeimg.pl/300/?text=3">
-              <img class="gallery-item" src="http://fakeimg.pl/300/?text=4">
-              <img class="gallery-item" src="http://fakeimg.pl/300/?text=5">
+              <div class="gallery-item">
+                <div class="gallery-item-content item1">
+                  <h3>文字文字</h3>
+                  <img class="" src="assets/img/productAdventanges1.png">
+                </div>
+                <p>
+                  文字文字文字文字文字文字文字文字文字文字文字文
+                  字文字文字文字文字文字文字文字文字文字文字文字
+                  文字文字文字文字文字文字文字文字文字文字
+                </p>
+              </div>
+              <div class="gallery-item">
+                <div class="gallery-item-content item2">
+                  <h3>文字文字</h3>
+                  <img class="" src="assets/img/productAdventanges2.png">
+                </div>
+                <p>
+                  文字文字文字文字文字文字文字文字文字文字文字文
+                  字文字文字文字文字文字文字文字文字文字文字文字
+                  文字文字文字文字文字文字文字文字文字文字
+                </p>
+              </div>
+              <div class="gallery-item">
+                <div class="gallery-item-content item3">
+                  <h3>文字文字</h3>
+                  <img class="" src="assets/img/productAdventanges3.png">
+                </div>
+                <p>
+                  文字文字文字文字文字文字文字文字文字文字文字文
+                  字文字文字文字文字文字文字文字文字文字文字文字
+                  文字文字文字文字文字文字文字文字文字文字
+                </p>
+              </div>
+              <div class="gallery-item">
+                <div class="gallery-item-content item4">
+                  <h3>文字文字</h3>
+                  <img class="" src="assets/img/productAdventanges4.png">
+                </div>
+                <p>
+                  文字文字文字文字文字文字文字文字文字文字文字文
+                  字文字文字文字文字文字文字文字文字文字文字文字
+                  文字文字文字文字文字文字文字文字文字文字
+                </p>
+              </div>
+              <div class="gallery-item">
+                <div class="gallery-item-content item5">
+                  <h3>文字文字</h3>
+                  <img class="" src="assets/img/productAdventanges5.png">
+                </div>
+                <p>
+                  文字文字文字文字文字文字文字文字文字文字文字文
+                  字文字文字文字文字文字文字文字文字文字文字文字
+                  文字文字文字文字文字文字文字文字文字文字
+                </p>
+              </div>
+              <div class="gallery-controls">
+                <i class="fas fa-arrow-circle-left controlButton gallery-controls-previous"></i>
+                <i class="fas fa-arrow-circle-right controlButton gallery-controls-next"></i>
+              </div>
             </div>
-            <div class="gallery-controls"></div>
+            
           </div>
   
           <!-- <div class="row">
