modifing contract and footer 1

--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
 
 
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact">
-        <div class="container">
+      <section id="contact" class="contact"  style="background-color: #1c20ff;">
+        <div class="container" style="background-color: #ff901c;">
 
           <!-- <div class="section-title" data-aos="zoom-out">
             <h2>Contact</h2>
@@ -396,7 +396,7 @@
           </div>
 
           <div class="row mt-5">
-            <div class="col-lg-4" data-aos="fade-right">
+            <div class="col-lg-4" data-aos="fade-right" style="background-color: #65c600;">
               <div class="info">
                 <div class="email">
                   <i class="fas fa-envelope"></i>
