contact section finish

--- a/index.html
+++ b/index.html
@@ -381,22 +381,10 @@
 
 
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact"  style="background-color: #1c20ff;">
-        <div class="container" style="background-color: #ff901c;">
-
-          <!-- <div class="section-title" data-aos="zoom-out">
-            <h2>Contact</h2>
-            <p>Contact Us</p>
-          </div> -->
-
-          <!-- <div class="sectionTitleDiv">
-            <div class="sectionTitle">LEACLOUD</div>
-            <h1 class="sectionSubTitle">想獲得更多資訊</h1>
-            <h2 class="sectionSubTitle1">MORE INFORMATION</h2>
-          </div> -->
-
+      <section id="contact" class="contact">
+        <div class="container">
           <div class="row mt-5">
-            <div class="col-lg-6 contactInfo" data-aos="fade-right" style="background-color: #65c600;">
+            <div class="col-lg-6 contactInfo" data-aos="fade-right">
               <div class="sectionTitleDiv">
                 <div class="sectionTitle">LEACLOUD</div>
                 <h1 class="sectionSubTitle">想獲得更多資訊</h1>
@@ -406,41 +394,22 @@
               <div class="info">
                 <div class="email">
                   <i class="fas fa-envelope"></i>
-                  <!-- <i class="icofont-envelope"></i> -->
-                  <!-- <h4>Email:</h4> -->
                   <p>info@example.com</p>
                 </div>
                 <div class="address">
                   <i class="fas fa-map-marker-alt"></i>
-                  <!-- <i class="icofont-google-map"></i> -->
-                  <!-- <h4>Location:</h4> -->
                   <p>A108 Adam Street, New York, NY 535022</p>
                 </div>
                 <div class="phone">
                   <i class="fas fa-headset"></i>
-                  <!-- <i class="icofont-phone"></i> -->
-                  <!-- <h4>Call:</h4> -->
                   <p>+1 5589 55488 55s</p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-5 mt-5 mt-lg-0 contactInputs" data-aos="fade-left" style="background-color: #911cff;">
+            <div class="col-lg-1 mt-4 vhr"></div>
+            <div class="col-lg-4 mt-4 mt-lg-0 contactInputs" data-aos="fade-left">
               <h2 class="contactInputsTitle">留下寶貴意見</h2>
               <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <!-- <div class="row">
-                  <div class="col-md-6 form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                    <div class="validate"></div>
-                  </div>
-                  <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                    <div class="validate"></div>
-                  </div>
-                </div> -->
-                <!-- <div class="form-group mt-3">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <div class="validate"></div>
-                </div> -->
                 <div class="form-group mt-3">
                   <input type="text" class="form-control" name="name" id="name" placeholder="名字" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <div class="validate"></div>
@@ -460,13 +429,11 @@
                 </div>
                 <div class=""><button type="submit">送出</button></div>
               </form>
-
             </div>
-
           </div>
-
         </div>
-      </section><!-- End Contact Section -->
+      </section>
+      <!-- End Contact Section -->
 
       <!-- FOOTER -->
       <!-- <footer class="container">
