adjust footer and globe section layout on mobile

--- a/index.html
+++ b/index.html
@@ -249,14 +249,17 @@
 
       <section class="globe">
         <div class="container">
-          <div class="globeSection" style="width: 60%; height: auto; background-color: crimson;"></div>
-          <div class="description" style="width: 40%;background-color: darkgreen;">
+          <div class="globeSection col-lg-6" style="background-color: crimson;">123</div>
+          <div class="description col-lg-6" style="background-color: darkgreen;">
             <div class="sectionTitleDiv">
               <div class="sectionTitle">LEACLOUD</div>
               <h1 class="sectionSubTitle">提供全球化專業節點</h1>
               <hr/>
             </div>
             <p>
+              文字文字文字文字文字文字文字文字文字文字文字文
+              字文字文字文字文字文字文字文字文字文字文字文字
+              文字文字文字文字文字文字文字文字文字文字<br>
               文字文字文字文字文字文字文字文字文字文字文字文
               字文字文字文字文字文字文字文字文字文字文字文字
               文字文字文字文字文字文字文字文字文字文字
@@ -391,11 +394,11 @@
       
       <footer class="footer">
         <div class="container" >
-          <div class="col-lg-3 col-md-6 interval footerLogo">
+          <div class="col-lg-3 col-md-12 interval footerLogo">
             <img src="assets/img/LeaCloud_logo_white.png">
             <p>提供您最高品質網路使用體驗</p>
           </div>
-          <div class="col-lg-2 col-md-6 interval">
+          <div class="col-lg-2 col-md-12 interval">
             <hr class="aboutUs" />
             <h4>關於我們</h4>
             <div><a href="#">LeaCloud團隊</a></div>
@@ -403,7 +406,7 @@
             <div><a href="#">公司資訊</a></div>
           </div>
 
-          <div class="col-lg-2 col-md-6 interval">
+          <div class="col-lg-2 col-md-12 interval">
             <hr class="helpCenter" />
             <h4>幫助中心</h4>
             <div><a href="#">聯繫客服</a></div>
@@ -411,7 +414,7 @@
             <div><a href="#">網站使用方式</a></div>
           </div>
 
-          <div class="col-lg-2 col-md-6 interval">
+          <div class="col-lg-2 col-md-12 interval">
             <hr class="toolsInfo" />
             <h4>工具資訊</h4>
             <div><a href="#">隱私權政策</a></div>
@@ -419,7 +422,7 @@
             <div><a href="#">Cookie政策</a></div>
           </div>
 
-          <div class="col-lg-2 col-md-6 interval">
+          <div class="col-lg-2 col-md-12 interval">
             <hr class="contactInfo" />
             <h4>聯絡資訊</h4>
             <div><a href="#">聯絡我們</a></div>
