--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
 
       <section class="globe">
         <div class="container">
-          <div class="globeSection col-lg-6" style="background-color: crimson;">123</div>
-          <div class="description col-lg-6" style="background-color: darkgreen;">
+          <div id="globeSection" class="col-lg-6"></div>
+          <div class="description col-lg-6">
             <div class="sectionTitleDiv">
               <div class="sectionTitle">LEACLOUD</div>
               <h1 class="sectionSubTitle">提供全球化專業節點</h1>
@@ -435,9 +435,11 @@
     <!-- Vendor JS Files -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/three/three.min.js"></script>
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/carousel.js"></script>
+    <script src="assets/js/globe.js"></script>
     <script>
 			// var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 			// if (isMobile) {
