add new markered globe1

--- a/index.html
+++ b/index.html
@@ -436,10 +436,13 @@
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/three/three.min.js"></script>
+    <script src="assets/vendor/three/three.js"></script>
+    <script src="assets/vendor/OrbitControls.js"></script>
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/carousel.js"></script>
-    <script src="assets/js/globe.js"></script>
+    <!-- <script src="assets/js/globe.js"></script> -->
+    <script src="assets/js/globe1.js"></script>
     <script>
 			// var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 			// if (isMobile) {
