adding cooperation section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/carousel.css" rel="stylesheet">
+    <link href="assets/css/carousel1.css" rel="stylesheet">
     <link href="assets/vendor/fontAwesome/css/all.css" rel="stylesheet">
   </head>
   
@@ -246,6 +247,91 @@
   
         </div>
       </section>
+      <section class="cooperation">
+        <div class="container">
+          <img src="/assets/img/cooperation/curveLine.png" alt="">
+          <div class="cooperationContent">
+            <div class="galleryNav" >123</div>
+            <div class="sectionTitleDiv">
+              <div class="sectionTitle">LEACLOUD</div>
+              <h1 class="sectionSubTitle">合作廠商</h1>
+              <hr>
+              <div class="cooperationIntro">
+                文字文字文字文字文字文字文字文字文字
+                文字文字文字文字文字文字文字文字文字
+                文字文字文字文字文字文字文字文字文字
+                文字文字文字文字文字文字文字文字文字
+              </div>
+            </div>
+            <div class="cooperationCarousel">
+              <div class="gallery">
+                <div class="galleryCooperationContainer">
+                  <div class="galleryCooperationItem">
+                    <!-- <div class="gallery-item-content item1">
+                      <h3>文字文字</h3>
+                      <img class="" src="assets/img/productAdventanges1.png">
+                    </div>
+                    <p>
+                      文字文字文字文字文字文字文字文字文字文字文字文
+                      字文字文字文字文字文字文字文字文字文字文字文字
+                      文字文字文字文字文字文字文字文字文字文字
+                    </p> -->
+                  </div>
+                  <div class="galleryCooperationItem">
+                    <!-- <div class="gallery-item-content item2">
+                      <h3>文字文字</h3>
+                      <img class="" src="assets/img/productAdventanges2.png">
+                    </div>
+                    <p>
+                      文字文字文字文字文字文字文字文字文字文字文字文
+                      字文字文字文字文字文字文字文字文字文字文字文字
+                      文字文字文字文字文字文字文字文字文字文字
+                    </p> -->
+                  </div>
+                  <div class="galleryCooperationItem">
+                    <!-- <div class="gallery-item-content item2">
+                      <h3>文字文字</h3>
+                      <img class="" src="assets/img/productAdventanges2.png">
+                    </div>
+                    <p>
+                      文字文字文字文字文字文字文字文字文字文字文字文
+                      字文字文字文字文字文字文字文字文字文字文字文字
+                      文字文字文字文字文字文字文字文字文字文字
+                    </p> -->
+                  </div>
+                  <div class="galleryCooperationItem">
+                    <!-- <div class="gallery-item-content item2">
+                      <h3>文字文字</h3>
+                      <img class="" src="assets/img/productAdventanges2.png">
+                    </div>
+                    <p>
+                      文字文字文字文字文字文字文字文字文字文字文字文
+                      字文字文字文字文字文字文字文字文字文字文字文字
+                      文字文字文字文字文字文字文字文字文字文字
+                    </p> -->
+                  </div>
+                  <div class="galleryCooperationItem">
+                    <!-- <div class="gallery-item-content item2">
+                      <h3>文字文字</h3>
+                      <img class="" src="assets/img/productAdventanges2.png">
+                    </div>
+                    <p>
+                      文字文字文字文字文字文字文字文字文字文字文字文
+                      字文字文字文字文字文字文字文字文字文字文字文字
+                      文字文字文字文字文字文字文字文字文字文字
+                    </p> -->
+                  </div>
+                  <div class="galleryCooperationControls">
+                    <i class="fas fa-arrow-circle-left controlButton gallery-controls-previous"></i>
+                    <i class="fas fa-arrow-circle-right controlButton gallery-controls-next"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="vertical"></div>
+        </div>
+      </section>
 
       <section class="globe">
         <div class="container">
@@ -441,6 +527,7 @@
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/carousel.js"></script>
+    <script src="assets/js/carousel1.js"></script>
     <!-- <script src="assets/js/globe.js"></script> -->
     <script src="assets/js/globe1.js"></script>
     <script>
