adjust cooperation section

--- a/index.html
+++ b/index.html
@@ -267,55 +267,55 @@
               <div class="gallery">
                 <div class="galleryCooperationContainer">
                   <div class="galleryCooperationItem">
-                    <!-- <div class="gallery-item-content item1">
-                      <h3>文字文字</h3>
-                      <img class="" src="assets/img/productAdventanges1.png">
+                    <div class="gallery-item-content item1">
+                      <!-- <h3>文字文字</h3>
+                      <img class="" src="assets/img/productAdventanges1.png"> -->
                     </div>
-                    <p>
+                    <!-- <p>
                       文字文字文字文字文字文字文字文字文字文字文字文
                       字文字文字文字文字文字文字文字文字文字文字文字
                       文字文字文字文字文字文字文字文字文字文字
                     </p> -->
                   </div>
                   <div class="galleryCooperationItem">
-                    <!-- <div class="gallery-item-content item2">
-                      <h3>文字文字</h3>
-                      <img class="" src="assets/img/productAdventanges2.png">
+                    <div class="gallery-item-content item2">
+                      <!-- <h3>文字文字</h3>
+                      <img class="" src="assets/img/productAdventanges2.png"> -->
                     </div>
-                    <p>
+                    <!-- <p>
                       文字文字文字文字文字文字文字文字文字文字文字文
                       字文字文字文字文字文字文字文字文字文字文字文字
                       文字文字文字文字文字文字文字文字文字文字
                     </p> -->
                   </div>
                   <div class="galleryCooperationItem">
-                    <!-- <div class="gallery-item-content item2">
-                      <h3>文字文字</h3>
-                      <img class="" src="assets/img/productAdventanges2.png">
+                    <div class="gallery-item-content item3">
+                      <!-- <h3>文字文字</h3>
+                      <img class="" src="assets/img/productAdventanges2.png"> -->
                     </div>
-                    <p>
+                    <!-- <p>
                       文字文字文字文字文字文字文字文字文字文字文字文
                       字文字文字文字文字文字文字文字文字文字文字文字
                       文字文字文字文字文字文字文字文字文字文字
                     </p> -->
                   </div>
                   <div class="galleryCooperationItem">
-                    <!-- <div class="gallery-item-content item2">
-                      <h3>文字文字</h3>
-                      <img class="" src="assets/img/productAdventanges2.png">
+                    <div class="gallery-item-content item4">
+                      <!-- <h3>文字文字</h3>
+                      <img class="" src="assets/img/productAdventanges2.png"> -->
                     </div>
-                    <p>
+                    <!-- <p>
                       文字文字文字文字文字文字文字文字文字文字文字文
                       字文字文字文字文字文字文字文字文字文字文字文字
                       文字文字文字文字文字文字文字文字文字文字
                     </p> -->
                   </div>
                   <div class="galleryCooperationItem">
-                    <!-- <div class="gallery-item-content item2">
-                      <h3>文字文字</h3>
-                      <img class="" src="assets/img/productAdventanges2.png">
+                    <div class="gallery-item-content item5">
+                      <!-- <h3>文字文字</h3>
+                      <img class="" src="assets/img/productAdventanges2.png"> -->
                     </div>
-                    <p>
+                    <!-- <p>
                       文字文字文字文字文字文字文字文字文字文字文字文
                       字文字文字文字文字文字文字文字文字文字文字文字
                       文字文字文字文字文字文字文字文字文字文字
