carousel auto play and cooperation carousel touch to scroll

--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                 </p>
               </div>
               <div class="gallery-controls">
-                <i class="fas fa-arrow-circle-left controlButton gallery-controls-previous"></i>
-                <i class="fas fa-arrow-circle-right controlButton gallery-controls-next"></i>
+                <i class="fas fa-arrow-circle-left controlButton gallery-controls-previous" id="servicesControlPre"></i>
+                <i class="fas fa-arrow-circle-right controlButton gallery-controls-next" id="servicesControlNex"></i>
               </div>
             </div>
           </div>
@@ -203,8 +203,17 @@
       <section class="cooperation">
         <div class="container">
           <img src="/assets/img/cooperation/curveLine.png" alt="">
-          <div class="cooperationContent">
+          <div class="cooperationContent carousel slide" data-ride="carousel">
             <div class="galleryNavContainer"></div>
+
+            <!-- <ol class="galleryNavContainer carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            </ol> -->
+
             <div class="sectionTitleDiv">
               <div class="sectionTitle">LEACLOUD</div>
               <h1 class="sectionSubTitle">合作廠商</h1>
@@ -314,8 +323,8 @@
                     </div>
                   </div>
                   <div class="galleryCooperationControls">
-                    <i class="fas fa-arrow-circle-left controlButton gallery-controls-previous"></i>
-                    <i class="fas fa-arrow-circle-right controlButton gallery-controls-next"></i>
+                    <i class="fas fa-arrow-circle-left controlButton gallery-controls-previous" id="cooperationControlPre"></i>
+                    <i class="fas fa-arrow-circle-right controlButton gallery-controls-next" id="cooperationControlNex"></i>
                   </div>
                 </div>
               </div>
@@ -430,15 +439,15 @@
               <div class="info">
                 <div class="email">
                   <i class="fas fa-envelope"></i>
-                  <p>info@example.com</p>
+                  <p>sales@leacloud.com</p>
                 </div>
                 <div class="address">
                   <i class="fas fa-map-marker-alt"></i>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Taipei, Taiwan</p>
                 </div>
                 <div class="phone">
                   <i class="fas fa-headset"></i>
-                  <p>+1 5589 55488 55s</p>
+                  <p>線上客服</p>
                 </div>
               </div>
             </div>
@@ -503,9 +512,9 @@
           <div class="col-lg-2 col-md-12 interval">
             <hr class="contactInfo" />
             <h4>聯絡資訊</h4>
-            <div><a href="#">聯絡我們</a></div>
-            <div><a href="#">+886 935-088-886</a></div>
-            <div><a href="#">k3nnyart@gmail.com</a></div>
+            <div><a href="#">Taipei, Taiwan</a></div>
+            <div><a href="#">+886 966-625-710</a></div>
+            <div><a href="#">sales@leacloud.com</a></div>
           </div>
         </footer>
     </main>
