Adjust Pricing section

--- a/index.html
+++ b/index.html
@@ -375,50 +375,52 @@
           <div class="row gy-4" data-aos="fade-left">
             <div class="col-lg-4 col-md-6 pricingBoxCotent" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
-                <h3 style="color: #07d5c0;">Free Plan</h3>
-                <div class="price"><sup>$</sup>0<span> / mo</span></div>
-                <img src="assets/img/pricing-free.png" class="img-fluid" alt="">
+                <h3>STANDARD</h3>
+                <div class="price">Free</div>
                 <ul>
-                  <li>Aida dere</li>
-                  <li>Nec feugiat nisl</li>
-                  <li>Nulla at volutpat dola</li>
-                  <li class="na">Pharetra massa</li>
-                  <li class="na">Massa ultricies mi</li>
+                  <li>根域名 10</li>
+                  <li>免費廣域憑證 1</li>
+                  <li>域名紀錄 100</li>
+                  <li>域名請求次數 50,000,000</li>
+                  <li>頻寬限制 512/kbps</li>
+                  <li>網路流量 500GB</li>
+                  <!-- <li class="na">Pharetra massa</li>
+                  <li class="na">Massa ultricies mi</li> -->
                 </ul>
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">立即試用</a>
               </div>
             </div>
   
             <div class="col-lg-4 col-md-6 pricingBoxCotent" data-aos="zoom-in" data-aos-delay="200">
               <div class="box">
-                <span class="featured">Featured</span>
-                <h3 style="color: #65c600;">Starter Plan</h3>
-                <div class="price"><sup>$</sup>19<span> / mo</span></div>
-                <img src="assets/img/pricing-starter.png" class="img-fluid" alt="">
+                <span class="featured">&nbsp</span>
+                <h3>PROFESSIONAL</h3>
+                <div class="price">300<sub>$</sub><span> / mo</span></div>
                 <ul>
-                  <li>Aida dere</li>
-                  <li>Nec feugiat nisl</li>
-                  <li>Nulla at volutpat dola</li>
-                  <li>Pharetra massa</li>
-                  <li class="na">Massa ultricies mi</li>
+                  <li>根域名 30</li>
+                  <li>免費廣域憑證 1</li>
+                  <li>域名紀錄 1000</li>
+                  <li>域名請求次數 50,000,000</li>
+                  <li>頻寬限制 10/kbps</li>
+                  <li>網路流量 500GB</li>
                 </ul>
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">立即訂購</a>
               </div>
             </div>
   
             <div class="col-lg-4 col-md-6 pricingBoxCotent" data-aos="zoom-in" data-aos-delay="300">
               <div class="box">
-                <h3 style="color: #ff901c;">Business Plan</h3>
-                <div class="price"><sup>$</sup>29<span> / mo</span></div>
-                <img src="assets/img/pricing-business.png" class="img-fluid" alt="">
+                <h3>BUSINESS</h3>
+                <div class="price">899<sub>$</sub><span> / mo</span></div>
                 <ul>
-                  <li>Aida dere</li>
-                  <li>Nec feugiat nisl</li>
-                  <li>Nulla at volutpat dola</li>
-                  <li>Pharetra massa</li>
-                  <li>Massa ultricies mi</li>
+                  <li>根域名 300</li>
+                  <li>免費廣域憑證 1</li>
+                  <li>域名紀錄 1000</li>
+                  <li>域名請求次數 50,000,000</li>
+                  <li>頻寬限制 20/kbps</li>
+                  <li>網路流量 500GB</li>
                 </ul>
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">搶先訂購</a>
               </div>
             </div>
           </div>
