Adjust header section

--- a/index.html
+++ b/index.html
@@ -25,19 +25,49 @@
           <a href="index.html"><img src="assets/img/LeaCloud_logo.png" class="img-fluid logoImg" ></a>
         </div>
 
-        <nav class="nav-menu d-none d-lg-block">
+        <div class="normal-ul">
+          <nav class="nav-menu  d-lg-block headerList">
+            <!-- d-none -->
+            <ul>
+              <li class="headerList-li"><a href="#">登入</a></li>
+              <li class="headerList-li"><a href="#">註冊</a></li>
+              <li class="headerList-li drop-down"><a>語言選擇</a>
+                <ul>
+                  <li><a href="#">EN</a></li>
+                  <li><a href="#">繁體中文</a></li>
+                </ul>
+              </li>
+              <li class="headerList-li"><a href="#">聯繫我們</a></li>
+            </ul>
+          </nav>
+          <img class="navMenuImg" src="assets/img/headerList.png" alt="">
+        </div>
+
+        <div class="mobile-ul">
+          <nav class="nav-menu  d-lg-block headerList">
+            <!-- d-none -->
+            <ul>
+              <li class="headerList-li"><a href="#">登入</a></li>
+              <li class="headerList-li"><a href="#">註冊</a></li>
+            </ul>
+          </nav>
+          <img class="navMenuImg" src="assets/img/headerList.png" alt="">
+        </div>
+
+        <!-- <nav class="nav-menu  d-lg-block headerList">
           <ul>
-            <li><a href="#">登入</a></li>
-            <li><a href="#">註冊</a></li>
-            <li class="drop-down"><a>語言選擇</a>
+            <li class="headerList-li"><a href="#">登入</a></li>
+            <li class="headerList-li"><a href="#">註冊</a></li>
+            <li class="headerList-li drop-down"><a>語言選擇</a>
               <ul>
                 <li><a href="#">EN</a></li>
                 <li><a href="#">繁體中文</a></li>
               </ul>
             </li>
-            <li><a href="#">聯繫我們</a></li>
+            <li class="headerList-li"><a href="#">聯繫我們</a></li>
           </ul>
-        </nav>
+          <img src="assets/img/headerList.png" alt="">
+        </nav> -->
       </div>
     </header>
 
@@ -55,8 +85,11 @@
                         M200 150 200 125 225 150 200 175Z"/>
               </svg> -->
               <img src="/assets/img/dotLineArrow.png" alt="" class="dotLineArrow">
-              <a href="#">
+              <!-- <a href="#">
                 <span class="right"></span>
+              </a> -->
+              <a href="#">
+                <i class="far fa-arrow-alt-circle-right tryNowBtn"></i>
               </a>
             </div>
           </div>
